--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://example.com"
+baseURL = "https://jessicahuang523.github.io"
 languageCode = "en"
 DefaultContentLanguage = "en"
 title = "Welcome"
